# tinyget

./: .flake8  .gitignore  Makefile  README.md  README_en.md  hatch_build.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/apt/: Dockerfile  devcontainer.json  mirror.txt
.devcontainer/dnf/: Dockerfile  devcontainer.json
.devcontainer/pacman/: Dockerfile  devcontainer.json  mirror.txt
.github/workflows/: build_test.yml
docs/: Development.md  TinyGet开发杂谈.pptx
docs/OSPP2024/: GuiDev.md  TestReport.md  ThirdParty.md
test/: test_basic_funcs.py  test_cli.py  test_common_utils.py  test_subprocess.py
tinyget/: __init__.py  common_utils.py  globals.py  i18n.py  main.py  package.py  t_commands.py  tinyget.py
tinyget/common/: __init__.py  exceptions.py  match_str_from_list.py
tinyget/gui/: Makefile  tinyget_pb2.py  tinyget_pb2.pyi  tinyget_pb2_grpc.py  tinyget_server.py
tinyget/interact/: __init__.py  ai_helper.py  buffer.py  process.py
tinyget/locale/: README.md  generate.sh
tinyget/locale/en_US/LC_MESSAGES/: _apt.mo  _apt.mo.sha256  _apt.po  _dnf.mo  _dnf.mo.sha256  _dnf.po  _pacman.mo  _pacman.mo.sha256  _pacman.po
tinyget/locale/zh_CN/LC_MESSAGES/: _apt.mo  _apt.mo.sha256  _apt.po  _dnf.mo  _dnf.mo.sha256  _dnf.po  _pacman.mo  _pacman.mo.sha256  _pacman.po
tinyget/repos/: __init__.py  third_party.py
tinyget/repos/builtin/mirrors/templates/: archlinux.py  debian.py  llvm_apt.py  ubuntu.py
tinyget/wrappers/: __init__.py  _apt.py  _dnf.py  _pacman.py  pkg_manager.py
tinyget/wrappers/deprecated/: _apt.py  _dnf.py
